intial header structure

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,18 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+* {
+    border: 1px solid salmon;
+}
+
 body {
     font-family: Roboto, sans-serif;
-    background-color: rgb(32, 32, 32);
-    height: 100vh;
     margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #F9FAFB;
+}
+
+.header {
+    background-color: #1F2937;
+    color: #F9FAFB;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
-.title {
-    color: rgb(255, 255, 255);
-    font-size: 32px;
-    font-weight: 700;
+.header.upper,
+.header.content {
+    width: 800px;
+}
+
+.header.upper {
+    
 }
