--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,6 +21,14 @@ a {
     color: #F9FAFB;
 }
 
+button {
+    color: #F9FAFB;
+    background-color: #3B82F6;
+    font-weight: 700;
+    border: 0;
+    padding: 8px 32px 8px 32px;
+}
+
 .header {
     background-color: #1F2937;
     color: #F9FAFB;
@@ -29,10 +37,16 @@ a {
     align-items: center;
 }
 
+.subtext {
+    color: #e5e7eb;
+    font-size: 18px;
+    margin: 16px 0 16px 0;
+}
+
 .content {
     display: flex;
     flex-direction: column;
-    width: 800px;
+    width: 1000px;
 }
 
 .content.nav {
@@ -40,6 +54,12 @@ a {
     padding: 16px 0 16px 0;
     justify-content: space-between;
     align-items: center;
+}
+
+.title {
+    color: #f9faf8;
+    font-weight: 900;
+    font-size: 48px;
 }
 
 .logo {
@@ -59,4 +79,18 @@ a {
 .content.header {
     padding: 96px 0 96px 0;
     flex-direction: row;
+    gap: 32px;
+}
+
+.header-text-container {
+    width: 50%;
+}
+
+.placeholder-image {
+    display: flex;
+    background-color: #6D747D;
+    flex: 1 1 auto;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
 }
