structure of the page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-* {
-    /* border: 1px solid salmon; */
-}
-
 body {
     font-family: Roboto, sans-serif;
     margin: 0;
@@ -29,16 +25,8 @@ button {
     padding: 8px 32px 8px 32px;
 }
 
-.header {
-    background-color: #1F2937;
-    color: #F9FAFB;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .subtext {
-    color: #e5e7eb;
+    color: #4B5563;
     font-size: 18px;
     margin: 16px 0 16px 0;
 }
@@ -46,9 +34,25 @@ button {
 .content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 1000px;
 }
 
+.random-information,
+.quote,
+.call-to-action {
+    display: flex;
+    justify-content: center;
+}
+
+/* header */
+.header {
+    background-color: #1F2937;
+    color: #F9FAFB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .content.nav {
     flex-direction: row;
     padding: 16px 0 16px 0;
@@ -56,10 +60,14 @@ button {
     align-items: center;
 }
 
-.title {
+.header-title {
     color: #f9faf8;
     font-weight: 900;
     font-size: 48px;
+}
+
+.subtext.header {
+    color: #e5e7eb;
 }
 
 .logo {
@@ -93,4 +101,36 @@ button {
     height: 200px;
     justify-content: center;
     align-items: center;
+}
+
+/* random info */
+.random-information {
+    padding: 32px 0 32px 0;
+}
+
+.title-information {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: center;
+}
+
+.image-grid {
+    display: flex;
+    flex-direction: row;
+}
+
+/* call to action */
+button .in-card {
+    border: 2px solid #F9FAFB;
+}
+
+/* footer */
+.footer {
+    display: flex;
+    background-color: #1F2937;
+    color: #F9FAFB;
+    padding: 48px;
+    text-align: center;
+    justify-content: center;
 }
