--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -35,7 +35,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 1000px;
+    width: 900px;
 }
 
 .random-information,
@@ -43,6 +43,7 @@ button {
 .call-to-action {
     display: flex;
     justify-content: center;
+    padding: 96px 0 96px 0;
 }
 
 /* header */
@@ -105,7 +106,7 @@ button {
 
 /* random info */
 .random-information {
-    padding: 32px 0 32px 0;
+
 }
 
 .title-information {
@@ -120,9 +121,51 @@ button {
     flex-direction: row;
 }
 
+/* quote */
+.quote {
+    background-color: #e5e7eb;
+}
+
+.quote-text,
+.quote-author {
+    color: #1F2937;
+    /* width: 80%; */
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    margin-left: 30px;
+}
+.quote-author {
+    font-size: 24px;
+    font-weight: 700;
+    text-align: right;
+}
+
 /* call to action */
 button .in-card {
     border: 2px solid #F9FAFB;
+}
+
+.call-to-action-card {
+    display: flex;
+    justify-content: space-between;
+    background-color: #3B82F6;
+    color: #e5e7eb;
+}
+
+.call-to-action-card h1
+.call-to-action-card .subtext {
+    margin: 0;
+    padding: 0;
+}
+
+.call-to-action-card h1 {
+    font-size: 16px;
+}
+.call-to-action-card .subtext {
+    color: #e5e7eb;
 }
 
 /* footer */
@@ -130,7 +173,7 @@ button .in-card {
     display: flex;
     background-color: #1F2937;
     color: #F9FAFB;
-    padding: 48px;
+    padding: 40px;
     text-align: center;
     justify-content: center;
 }
