--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,7 +21,10 @@ button {
     color: #F9FAFB;
     background-color: #3B82F6;
     font-weight: 700;
+    font-size: 15px;
     border: 0;
+    height: 40px;
+    border-radius: 8px;
     padding: 8px 32px 8px 32px;
 }
 
@@ -54,6 +57,7 @@ button {
     flex-direction: column;
     align-items: center;
 }
+
 .content.nav {
     flex-direction: row;
     padding: 16px 0 16px 0;
@@ -105,9 +109,7 @@ button {
 }
 
 /* random info */
-.random-information {
-
-}
+.random-information {}
 
 .title-information {
     font-size: 36px;
@@ -129,7 +131,6 @@ button {
 .quote-text,
 .quote-author {
     color: #1F2937;
-    /* width: 80%; */
 }
 
 .quote-text {
@@ -137,6 +138,7 @@ button {
     font-style: italic;
     margin-left: 30px;
 }
+
 .quote-author {
     font-size: 24px;
     font-weight: 700;
@@ -144,28 +146,30 @@ button {
 }
 
 /* call to action */
-button .in-card {
+.in-card-button {
+    flex: 0 0 auto;
     border: 2px solid #F9FAFB;
 }
 
 .call-to-action-card {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    padding: 48px 96px 48px 96px;
     background-color: #3B82F6;
     color: #e5e7eb;
 }
 
-.call-to-action-card h1
-.call-to-action-card .subtext {
-    margin: 0;
-    padding: 0;
+.call-to-action-card h1 {
+    font-size: 20px;
+    font-weight: 800;
 }
 
-.call-to-action-card h1 {
-    font-size: 16px;
-}
-.call-to-action-card .subtext {
-    color: #e5e7eb;
+.call-to-action-card h1,
+.call-to-action-card p {
+    padding: 0;
+    margin: 0;
 }
 
 /* footer */
